syntax = "proto3";

package server;
option go_package = "./;game";

service API {
  rpc RetrieveBalance (RetrieveBalanceInput) returns (RetrieveBalanceOutput) {}
}

message RetrieveBalanceOutput {
  double balance = 1;
}

message RetrieveBalanceInput {
  enum Currency {
    CURRENCY_UNKNOWN = 0;
    CURRENCY_USD = 1;
    CURRENCY_EUR = 2;
  }

  bytes user_id = 1;
  Currency currency = 2;
}